<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/timePicker"
        android:layout_width="54sp"
        android:layout_height="21sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="21sp"
        android:layout_marginTop="12sp">
        <TextView
            android:id="@+id/hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/gray"
            android:textSize="11sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sep"
            android:textColor="@color/gray"
            android:textSize="11sp"/>
        <TextView
            android:id="@+id/minute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/gray"
            android:textSize="11sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/wifi"
        android:layout_width="69sp"
        android:layout_height="14sp"
        android:layout_marginTop="16sp"
        app:layout_constraintStart_toEndOf="@+id/timePicker"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="201sp">
        <View
            android:layout_width="20sp"
            android:layout_height="wrap_content"
            android:background="@drawable/network"/>
        <View
            android:layout_width="16sp"
            android:layout_height="wrap_content"
            android:background="@drawable/wifi"
            android:layout_marginStart="4sp"/>
        <View
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/battery"
            android:layout_marginStart="4sp"/>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/timePicker"
        android:layout_marginTop="92sp"
        android:layout_marginStart="24sp">

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="38sp"
            android:text="@string/text"
            android:textColor="@color/gray2"
            android:textSize="14sp" />
    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="170sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout"
        android:layout_marginTop="20sp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="19sp">

        <FrameLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="72sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="14sp"
                android:textColor="@color/gray2"/>
            <EditText
                android:id="@+id/email_text"
                android:layout_width="match_parent"
                android:layout_height="48sp"
                android:layout_marginTop="24sp"
                android:background="@drawable/block"
                android:hint="@string/em_"
                android:textSize="14sp"
                android:paddingStart="10sp"
                android:textColorHint="@color/gray1"
                />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="72sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email"
            android:layout_marginTop="24sp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="14sp"
                android:textColor="@color/gray2"/>
            <EditText
                android:id="@+id/password_text"
                android:layout_width="match_parent"
                android:layout_height="48sp"
                android:layout_marginTop="24sp"
                android:background="@drawable/block"
                android:hint="@string/pass"
                android:textSize="14sp"
                android:textColorHint="@color/gray1"
                android:paddingStart="10sp"
                android:inputType="textPassword"
                />
        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/remember"
        android:layout_width="match_parent"
        android:layout_height="16sp"
        android:layout_marginStart="24sp"
        android:layout_marginEnd="24sp"
        android:layout_marginTop="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input">
        <CheckBox
            android:id="@+id/check"
            android:layout_width="wrap_content"
            android:layout_height="16sp"
            android:text="@string/remember"
            android:textSize="12sp"
            android:textColor="@color/gray2"
            android:buttonTint="@color/gray2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <View
            android:id="@+id/null_"
            app:layout_constraintStart_toStartOf="@id/check"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="97sp"/>

        <TextView
            android:id="@+id/forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot"
            android:textColor="@color/primary_color"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/null_"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/remember"
        android:layout_width="match_parent"
        android:layout_marginTop="187sp"
        android:layout_marginStart="24sp"
        android:layout_marginEnd="24sp"
        android:layout_height="46sp"
        android:text="@string/login"
        android:background="@drawable/button"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:onClick="signin"/>
    <FrameLayout
        android:id="@+id/have"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="75sp"
        android:layout_marginEnd="75sp"
        android:layout_marginTop="20sp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have"
            android:textColor="@color/gray2"
            android:textSize="14sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign"
            android:textColor="@color/primary_color"
            android:textSize="14sp"
            android:layout_marginStart="160sp"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/web"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/have"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140sp"
        android:layout_marginEnd="140sp"
        android:layout_marginTop="18sp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textColor="@color/gray2"
            android:textSize="14sp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/google"
            android:layout_marginTop="24sp"
            android:layout_marginStart="36sp"
            android:layout_marginEnd="36sp"/>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>