<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".InfoActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lobby"
        android:layout_width="match_parent"
        android:layout_height="108sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@android:color/white"
        android:elevation="8dp"
        android:translationZ="4dp">
        <LinearLayout
            android:id="@+id/timePicker"
            android:layout_width="54sp"
            android:layout_height="21sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="21sp"
            android:layout_marginTop="12sp">
            <TextView
                android:id="@+id/hour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray"
                android:textSize="11sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sep"
                android:textColor="@color/gray"
                android:textSize="11sp"/>
            <TextView
                android:id="@+id/minute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray"
                android:textSize="11sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/wifi"
            android:layout_width="69sp"
            android:layout_height="14sp"
            android:layout_marginTop="16sp"
            app:layout_constraintStart_toEndOf="@+id/timePicker"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="201sp">
            <View
                android:layout_width="20sp"
                android:layout_height="wrap_content"
                android:background="@drawable/network"/>
            <View
                android:layout_width="16sp"
                android:layout_height="wrap_content"
                android:background="@drawable/wifi"
                android:layout_marginStart="4sp"/>
            <View
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/battery"
                android:layout_marginStart="4sp"/>
        </LinearLayout>

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="20sp"
            android:layout_height="20sp"
            android:layout_marginStart="14sp"
            android:layout_marginTop="69sp"
            android:background="@drawable/back"
            android:onClick="back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <View
                android:layout_width="3.52sp"
                android:layout_height="7.06sp"
                android:layout_marginStart="8sp"
                android:layout_marginTop="6.47sp"
                android:background="@drawable/vector" />
        </FrameLayout>
        <ImageView
            android:id="@+id/itemPng"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:scaleType="centerCrop"
            android:clipToOutline="true"
            android:background="@drawable/image"
            android:src="@drawable/img1"
            android:layout_marginStart="20sp"
            android:layout_marginTop="60sp"
            app:layout_constraintStart_toEndOf="@id/frameLayout"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:id="@+id/itemText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/em_"
            android:textSize="16.04sp"
            android:layout_marginStart="10sp"
            android:layout_marginTop="70sp"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toEndOf="@id/itemPng"
            app:layout_constraintTop_toTopOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    
    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintTop_toBottomOf="@id/lobby"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/enter"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="670sp"
        android:background="@android:color/white">
        <EditText
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_marginTop="10sp"
            android:background="@drawable/lobby"
            android:paddingStart="34sp"
            android:hint="@string/message"
            android:textColorHint="@color/gray2"
            android:textSize="12sp"
            android:paddingTop="12sp"
            android:paddingBottom="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>